--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,18 @@
-services:
+services: 
   postgres:
     image: postgres
-    container_name: postgres
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - ${POSTGRES_PORT}:5432
     restart: always
   adminer:
+    image: adminer
     container_name: adminer
     environment:
       ADMINER_DESIGN: pepa-linha
-      ADMINER_DEFAULT_SERVER: postgres
-    image: adminer
+      ADMINER_DEFAULT_SERVER: database
     ports:
-      - "8080:8080"
-    restart: always
+      - 8080:8080
