--- a/.env
+++ b/.env
@@ -3,4 +3,15 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
+
 JWT_SECRET=secret
+
+# mail
+MAIL_HOST=localhost
+MAIL_PORT=25
+MAIL_USER=user@example.com
+MAIL_PASSWORD=topsecret
+MAIL_FROM=noreply@example.com
+
+# prod
+# MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
