--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,9 @@ services:
       ADMINER_DEFAULT_SERVER: database
     ports:
       - 8080:8080
+  maildev:
+    image: maildev/maildev
+    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
+    ports:
+      - "8081:80"
+      - "25:25"
