--- a/.env
+++ b/.env
@@ -13,5 +13,9 @@ MAIL_USER=user@example.com
 MAIL_PASSWORD=topsecret
 MAIL_FROM=noreply@example.com
 
+#Supabase
+SUPABASE_URL=https://<your_supabase_url>.supabase.co
+SUPABASE_ANON_KEY=<your_supabase_key>
+
 # prod
 # MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
