--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@supabase/supabase-js": "^2.23.0",
     "bcrypt": "^5.1.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "supabase": "^1.64.0",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
