--- a/.env_exemple
+++ b/.env_exemple
@@ -1,6 +1,18 @@
 POSTGRES_HOST=localhost
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
+POSTGRES_PORT=5432
+
 JWT_SECRET=secret
+
+# mail
+MAIL_HOST=localhost
+MAIL_PORT=25
+MAIL_USER=user@example.com
+MAIL_PASSWORD=topsecret
+MAIL_FROM=noreply@example.com
+
+#Supabase
+SUPABASE_URL=https://plovjzslospfwozcaesq.supabase.co
+SUPABASE_ANON_KEY=
